apps/home_assistant/templates/cs-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: codeserver-httproute
  namespace: home-assistant
spec:
  hostnames:
    - codeserver.app.damman.tech
  parentRefs:
    - name: app-gateway
      namespace: kube-system
      sectionName: app-https-listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant-codeserver
          port: 12321
