apps/home_assistant/templates/ha-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ha-httproute
  namespace: home-assistant
spec:
  parentRefs:
    - name: app-gateway
      namespace: kube-system
      sectionName: app-https-listener
  hostnames:
    - ha.app.damman.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - name: home-assistant
          port: 8123
